--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#contact">Contact</a>
     </nav>
 
-    <a href="#" class="btn-primary nav-btn desktop-btn">Download App</a>
+    <a href="https://play.google.com/store/apps/details?id=com.rodeodigital.kanchimas&pcampaignid=web_share" class="btn-primary nav-btn desktop-btn">Download App</a>
 
     <!-- HAMBURGER ICON -->
     <i class="fa-solid fa-bars hamburger-icon" id="hamburger"></i>
