--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Your trusted supermarket since 2003 – groceries, gifts, bags & more delivered to your doorstep.</p>
 
     <div class="hero-buttons">
-      <a href="#" class="btn-primary">Download App</a>
+      <a href="https://play.google.com/store/apps/details?id=com.rodeodigital.kanchimas&pcampaignid=web_share" class="btn-primary">Download App</a>
       <a href="tel:+918825971181" class="btn-outline">Call Now</a>
     </div>
   </div>
@@ -222,7 +222,7 @@
 
     <div class="map-wrapper">
       <iframe
-        src="https://www.google.com/maps/d/embed?mid=1y2QX3ExampleReplaceThis"
+        src="https://maps.app.goo.gl/co72TfFjDN6J8ErX6"
         width="100%"
         height="450"
         style="border:0;"
